<resources>
    <string name="app_name">UsingGMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="Charities">Charities</string>
    <string name="Events">Events</string>
    <string name="Ads">Watch Ads</string>
    <string name="Next">Next</string>
    <string name="Check">✔</string>
    <string name="Community">Community</string>
    <string name="Education">Education</string>
    <string name="Health">Health</string>
    <string name="Religion">Religion</string>
    <string name="Welfare">Welfare</string>
    <string name="All">All</string>
    <string name="Search">Search</string>
    <string name="Clear">Clear</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="Logo">Logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_descriptions">DescriptionsActivity</string>


    <string name="title_activity_finance">financeActivity</string>
    <string name="Finance">Finance</string>
    <string name="title_activity_testingtabs">testingtabs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_testing">TestingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">159459124766043</string>
    <string name="fb_login_protocol_scheme">fb159459124766043</string>

    <!--String variables for Event Form-->
    <string name="form_description">Please fill in all parts of the form:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="cat">Event Category:</string>
    <string name="description">Description:</string>
    <string name="spinner_description">Category</string>
    <string name="event_description">Details</string>
    <string name="event_submit">Create</string>
    <string name="form_user_name">Host Name</string>
    <string name="form_email">Email</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="category4">Category4</string>
    <string name="category5">Category5</string>
    <string name="event_name">Event Name</string>
    <string name="form_location">Location</string>
    <string name="form_timeS">Start Time</string>
    <string name="form_dateS">Start Date</string>
    <string name="form_timeE">End Time</string>
    <string name="form_dateE">End Date</string>z
</resources>
