<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@color/LogoBlue"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:capitalize="none"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="New Event"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/EventName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:hint="@string/event_name"
            android:inputType="textPersonName"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:background="@drawable/edittextshape"
            android:textColorHint="@color/White"
            android:textColor="@color/White"></EditText>
        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_host"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>

                <EditText
                    android:id="@+id/EditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/form_user_name"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/White"
                    android:textSize="17dp"
                    android:textColor="@color/White"></EditText>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_black_24dp"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>

                <EditText
                    android:id="@+id/EditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/form_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/White"
                    android:textSize="17dp"
                    android:textColor="@color/White"></EditText>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>

                <EditText
                    android:id="@+id/EditTextDateS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/form_dateS"
                    android:inputType="date"
                    android:textColorHint="@color/White"
                    android:textSize="17dp"
                    android:textColor="@color/White"></EditText>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"/>

                <EditText
                    android:id="@+id/EditTextDateE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/form_dateE"
                    android:inputType="date"
                    android:textColorHint="@color/White"
                    android:textSize="17dp"
                    android:textColor="@color/White"></EditText>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>

                <EditText
                    android:id="@+id/EditTextTimeS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edittextshape"
                    android:hint="@string/form_timeS"
                    android:inputType="datetime"
                    android:textColorHint="@color/White"
                    android:textSize="17dp"
                    android:textColor="@color/White"></EditText>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"/>
                <EditText
                        android:id="@+id/EditTextTimeE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="35dp"
                        android:hint="@string/form_timeE"
                        android:inputType="datetime"
                        android:layout_weight="0.8"
                        android:textSize="17dp"
                    android:textColor="@color/White"
                    android:background="@drawable/edittextshape"
                    android:textColorHint="@color/White"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>

                <EditText
                    android:id="@+id/EditTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/edittextshape"
                    android:hint="Address"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/White"
                    android:textColor="@color/White"
                    android:textSize="17dp"></EditText>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>
                <Spinner
                    android:id="@+id/eventSpinner"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_description"
                    android:layout_width="wrap_content"
                    android:entries="@array/categorytypelist"
                    android:layout_weight="0.8"
                    android:layout_marginRight="35dp"
                    android:paddingTop="13dp"

                    >
                </Spinner>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:layout_weight="0.2"
                    android:paddingTop="13dp"/>
                <EditText
                    android:id="@+id/EditTextFeedbackBody"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:textSize="17dp"
                    android:layout_weight="0.8"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/edittextshape"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White">
                </EditText>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/event_submit"
            android:background="@drawable/roundbuttongreen"
            android:onClick="createEvent"
            android:layout_gravity="center"
            android:layout_width="fill_parent">
        </Button>
    </LinearLayout>
</ScrollView>